--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,6 @@
 		<title>Hello, World!</title>
 	</head>
 	<body>
-		<h1 id="heading"></h1>
-		<script>
-			fetch('/message')
-				.then((resp) => resp.text())
-				.then((text) => {
-					const h1 = document.getElementById('heading');
-					h1.textContent = text;
-				});
-		</script>
+		<h1>Hello, World!</h1>
 	</body>
 </html>
