--- a/public/webix_post.html
+++ b/public/webix_post.html
@@ -4,23 +4,53 @@
     <meta charset="UTF-8">
     <title>Post</title>
   <link rel="stylesheet" href="/css/webix.min.css" type="text/css">
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
+<div id="app"></div>
 <script src="/js/webix.min.js" type="text/javascript"></script>
 <script>
     webix.ready(function() {
         webix.ui({
+            id: "app",
             view:"datatable",
-            autoheight:true,
+            // autoheight:true,
             minHeight:100,
             autowidth:true,
+            editable:true,
+            editaction:"dblclick",
+            scroll:false,
+            select:true,
+            css:{
+                margin:"200px auto",
+            },
             columns: [
                 {id: "id", header: "id", width: 50},
-                {id: "title", header: "标题", width: 200},
-                {id: "body", header: "内容", width: 500},
+                {id: "title", header: "标题", width: 200,editor: "text"},
+                {id: "body", header: "内容", width: 500,editor: "text"},
                 {id: "update_time", header: "创建时间", width: 150, template:function(obj){return new Date(obj.update_time).toLocaleString()}}
             ],
-
+            on:{
+                onAfterEditStop: async function (state, editor, ignoreUpdate) {
+                    if (ignoreUpdate) return;
+                    // console.log(`更新后的值:${state.value},更新前的值:${state.old}`);
+                    // console.log(`更的列名:${editor.column},id:${editor.row}`);
+                    const params = {[editor.column]: state.value}
+                    const response = await webix.ajax()
+                        .headers({token: window.localStorage.getItem("token"),"Content-type":"application/json"})
+                        .put("/api/post/"+editor.row,JSON.stringify(params))
+                    const json = await response.json()
+                    if (json.code !== 200) {
+                        webix.alert(json.msg)
+                    }
+                }
+            },
             url:async function () {
                 const response = await webix.ajax().headers({token: window.localStorage.getItem("token")}).get("/api/post")
                 const res = await response.json()
