--- a/public/webix_post.html
+++ b/public/webix_post.html
@@ -92,7 +92,7 @@
             const response = await webix.ajax().headers({token: window.localStorage.getItem("token")}).get("/api/post")
             const res = await response.json()
             if (res.code !== 200) {
-                webix.alert(res.msg);
+                await webix.alert(res.msg);
                 window.location.href="/login"
             } else {
                 $$("mytable").parse(res.data,"json",true);
